# Ibex

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  INSTALL.md  README.md  ROADMAP.md  SPEC.md  TODO.md  comparison.md  create_prices.sh  ibex_ipython.py  pyproject.toml  test.ibex
.githooks/: post-commit  pre-commit  pre-push
benchmarking/: analyze_scales.ibex  bench_clickhouse.py  bench_datafusion.py  bench_duckdb.py  bench_ibex.sh  bench_ibex_compiled.sh  bench_join.sh  bench_mem.py  bench_r.R  (+17 more)
examples/: CMakeLists.txt  basic.cpp  columns.ibex  correlated_subquery.ibex  effects.ibex  function_table_contracts.ibex  head.ibex  join.ibex  kafka_ohlc.ibex  kafka_ohlc_avro.ibex  kafka_ticks_avro.ibex  map_features.ibex  named_args.ibex  nan_cleaning.ibex  null_io.ibex  nulls.ibex  onebrc.ibex  optimization_showcase.ibex  optiver_close.ibex  order.ibex  parquet.ibex  parquet_https.ibex  parquet_s3.ibex  quant.ibex  quant_pandas.py  quant_polars.py  rank.ibex  regression.ibex  rng_clustering.ibex  rng_pca.ibex  rng_regression.ibex  select_shorthand.ibex  series_literals.ibex  sqlite_1brc.ibex  string_filter.ibex  tail.ibex  timeframes.ibex  tuple_assign.ibex
examples/brownian/: brownian_stream.ibex  monitor.cpp  run_demo.sh  tick_gen.cpp
examples/data/: departments.csv  employees.csv  gen_ohlcv.py  null_metrics.txt
examples/leetcode/: README.md  consecutive_numbers.ibex  consecutive_numbers.py  customers_who_never_order.ibex  customers_who_never_order.py  department_top_three_salaries.ibex  department_top_three_salaries.py  employees_earning_more_than_managers.ibex  employees_earning_more_than_managers.py  nth_highest_salary.ibex  nth_highest_salary.py  rising_temperature.ibex  rising_temperature.py  second_highest_salary.ibex  second_highest_salary.py
examples/leetcode/data/: employee_managers.csv  logs.csv
examples/market_stream/: bar_receiver.py  market_stream.ibex  market_stream_ws.ibex  tick_sender.py  ws_client.py  ws_dashboard.html
examples/quant_demo/: .gitignore  README.md  gen_data.py  quant_demo.ibex  quant_demo_polars.py  run.sh
libraries/: CMakeLists.txt  csv.cpp  csv.hpp  parquet.hpp
libs/adbc/: CMakeLists.txt  adbc.cpp  adbc.ibex
libs/csv/: CMakeLists.txt  csv.cpp  csv.hpp  csv.ibex  install.sh
libs/json/: CMakeLists.txt  json.cpp  json.hpp  json.ibex
libs/kafka/: CMakeLists.txt  kafka.cpp  kafka.hpp  kafka.ibex  kafka_avro.hpp  kafka_common.hpp  schema_registry.hpp  schema_registry_client.hpp
libs/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans.hpp  kmeans.ibex
libs/lightbm/: CMakeLists.txt  lightbm.cpp  lightbm.hpp  lightbm.ibex
libs/lightgbm/: CMakeLists.txt  lightgbm.cpp  lightgbm.hpp  lightgbm.ibex
libs/parquet/: CMakeLists.txt  build.sh  parquet.cpp  parquet.hpp  parquet.ibex
libs/pca/: CMakeLists.txt  pca.cpp  pca.hpp  pca.ibex
libs/sqlite/: CMakeLists.txt  sqlite.cpp  sqlite.hpp  sqlite.ibex
libs/udp/: CMakeLists.txt  udp.cpp  udp.hpp  udp.ibex
libs/websocket/: CMakeLists.txt  websocket.cpp  websocket.hpp  websocket.ibex
python/: CMakeLists.txt  __init__.py  ibex_ipython.py  ibex_pyarrow_module.cpp  plot_ibex_pyarrow_demo.ibex  plot_ibex_pyarrow_demo.py  test_ibex_ipython.py  test_ibex_pyarrow.py
src/codegen/: CMakeLists.txt  emitter.cpp
src/core/: CMakeLists.txt  column.cpp  dataframe.cpp
src/interop/: CMakeLists.txt  arrow_c_data.cpp
src/ir/: CMakeLists.txt  builder.cpp  canonicalize.cpp  cardinality.cpp  expr_predicates.cpp  extern_sources.cpp  join_order.cpp  join_pushdown.cpp  join_reorder.cpp  node.cpp  optimizer.cpp  required_columns.cpp  scan_predicates.cpp  schema.cpp
src/parser/: CMakeLists.txt  effects.cpp  lexer.cpp  lower.cpp  parser.cpp
src/repl/: CMakeLists.txt  repl.cpp
src/runtime/: CMakeLists.txt  aggregate.cpp  chunked.cpp  csv.cpp  expr.cpp  extern_functions.cpp  extern_registry.cpp  filter.cpp  interpreter.cpp  interpreter_internal.hpp  join.cpp  join_internal.hpp  lazy_table.cpp  like.hpp  model.cpp  model_internal.hpp  ops.cpp  pipeline.cpp  reshape.cpp  reshape_internal.hpp  rng.cpp  runtime_internal.cpp  runtime_internal.hpp  sort.cpp  table_format.cpp  update.cpp  window.cpp
tests/: .clang-tidy  CMakeLists.txt  catch_string_view_apple.cpp  test_arrow_c_data.cpp  test_codegen.cpp  test_column.cpp  test_csv.cpp  test_e2e.cpp  test_filter_selection.cpp  test_interpreter.cpp  test_interrupt.cpp  test_ir_canonicalize.cpp  test_ir_cardinality.cpp  test_ir_extern_sources.cpp  test_ir_join_order.cpp  test_ir_join_pushdown.cpp  test_ir_join_reorder.cpp  test_ir_node.cpp  test_ir_optimizer.cpp  test_ir_required_columns.cpp  test_ir_schema.cpp  test_join.cpp  test_json.cpp  test_kafka_avro.cpp  test_kafka_common.cpp  test_kafka_schema_registry.cpp  test_kafka_schema_registry_client.cpp  test_lazy_table.cpp  test_lexer.cpp  test_lower.cpp  test_operator.cpp  test_parser.cpp  test_repl.cpp  test_sqlite.cpp  test_udp.cpp  test_websocket.cpp
tests/data/: compile_csv.ibex  compile_parquet.ibex  compile_parquet_https.ibex  compile_parquet_s3.ibex  gen_parquet_plain_page_boundary.py  iris.ibex  null_keys_asof_left.csv  null_keys_asof_right.csv  null_keys_check.csv  null_keys_check.ibex  null_keys_dcast.csv  null_keys_multi.csv  parquet_categorical_check.ibex  parquet_chunk_check.ibex  parquet_nulls_check.csv  parquet_nulls_check.ibex  parquet_plain_page_boundary_check.ibex  parquet_smoke.ibex  repl_infer.ibex
tests/parity/: run_parity.sh
tests/parity/cases/: basic_update.ibex  correlated_scalar_subquery.ibex  count_non_null.ibex  grouped_agg_quantile.ibex  left_join_null_filter.ibex  non_equijoin.ibex  rolling_percall_window.ibex  scalar_let_arith.ibex  scalar_let_filter.ibex  scalar_let_string_filter.ibex  string_like_filter.ibex  substring_slice.ibex  tuple_update_merge.ibex  window_by.ibex
tools/: CMakeLists.txt  bench_datatable.R  bench_polars.py  bench_polars_agg.py  bench_read_csv.cpp  bench_tf.py  gen_tf_data.cpp  gen_tf_data.hpp  ibex_bench.cpp  ibex_compile.cpp  ibex_eval.cpp  ibex_fusion_bench.cpp  ibex_join_bench.cpp  ibex_repl.cpp  import_resolver.hpp
(+224 files in other folders)
